color fixes and ui fix

--- a/app/src/main/res/layout/fragment_admin_event.xml
+++ b/app/src/main/res/layout/fragment_admin_event.xml
@@ -8,12 +8,13 @@
 
     <TextView
         android:id="@+id/eventheading"
-        android:layout_width="164dp"
-        android:layout_height="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
         android:text="Event"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="@dimen/material_drawer_account_header_compact"
@@ -51,6 +52,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/aetv1"
             android:text="Select Sport"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -76,6 +78,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="20sp"
             android:id="@+id/aetv2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintTop_toBottomOf="@id/eventsportlist"
             android:text="Select Venue"
             android:layout_height="wrap_content"
@@ -124,6 +127,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Start Time"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/eventendtime"
             app:layout_constraintHorizontal_bias="0.5"
@@ -135,6 +139,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="End Time"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/eventdatetime"
             app:layout_constraintHorizontal_bias="0.5"
