--- a/app/src/main/res/layout/fragment_admin_sport_recycler_view.xml
+++ b/app/src/main/res/layout/fragment_admin_sport_recycler_view.xml
@@ -34,6 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textAlignment="center"
                 android:text="@string/sports"
                 android:textSize="50sp"
