--- a/app/src/main/res/layout/sporttile.xml
+++ b/app/src/main/res/layout/sporttile.xml
@@ -18,9 +18,9 @@
         android:id="@+id/sportTileTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/title"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textSize="20sp"
         android:textStyle="bold"
 
         app:layout_constraintEnd_toEndOf="parent"
