--- a/app/src/main/res/layout/timelinetile.xml
+++ b/app/src/main/res/layout/timelinetile.xml
@@ -28,7 +28,7 @@
             android:id="@+id/timelineslotstarttime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/title"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/timelineslotendtime"
@@ -39,7 +39,7 @@
             android:id="@+id/timelineslotendtime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/title"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/timelineslotcount"
@@ -50,7 +50,7 @@
             android:id="@+id/timelineslotcount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="@color/title"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -86,6 +86,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+"
+
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
