--- a/app/src/main/res/layout/fragment_admin_news.xml
+++ b/app/src/main/res/layout/fragment_admin_news.xml
@@ -13,7 +13,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:text="News"
+        android:textStyle="bold"
         android:textAlignment="center"
         android:textSize="@dimen/material_drawer_account_header_compact"
         app:layout_constraintEnd_toEndOf="parent"
