--- a/app/src/main/res/layout/fragment_admin_venue.xml
+++ b/app/src/main/res/layout/fragment_admin_venue.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="10dp"
         android:text="@string/venue"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textSize="@dimen/material_drawer_account_header_compact"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,6 +53,7 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="20sp"
             android:id="@+id/avtv1"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintTop_toTopOf="parent"
             android:text="@string/select_venue"
             android:layout_height="wrap_content"
