--- a/app/src/main/res/layout/fragment_admin_venue_recycler_viewfrag.xml
+++ b/app/src/main/res/layout/fragment_admin_venue_recycler_viewfrag.xml
@@ -34,7 +34,7 @@
                 android:layout_centerHorizontal="true"
                 android:textAlignment="center"
                 android:text="Venue"
-                android:textColor="@color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="50sp"
                 android:textStyle="bold" />
 
