--- a/app/src/main/res/layout/fragment_farg_about_us.xml
+++ b/app/src/main/res/layout/fragment_farg_about_us.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:text="About Us"
-            android:textColor="@color/black"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="50sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -37,8 +37,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginStart="20dp"
             android:text="@string/aboutus"
-            android:textColor="@color/black"
-            
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
