--- a/app/src/main/res/layout/fragment_frag_contact_us.xml
+++ b/app/src/main/res/layout/fragment_frag_contact_us.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:text="Contact us"
-            android:textColor="@color/black"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="50dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
             android:layout_marginTop="10dp"
             android:text="@string/contactus"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
