--- a/app/src/main/res/layout/fragment_fragment_admin_event_recyclerview.xml
+++ b/app/src/main/res/layout/fragment_fragment_admin_event_recyclerview.xml
@@ -40,7 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:text="Events"
-                android:textColor="@color/black"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textSize="50sp"
                 android:textStyle="bold" />
 
