--- a/app/src/main/res/layout/fragment_user_find_buddy.xml
+++ b/app/src/main/res/layout/fragment_user_find_buddy.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="10dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:text="Find Buddy"
         android:textStyle="bold"
         android:textAlignment="center"
@@ -57,6 +58,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             android:id="@+id/uetv1"
             android:text="Select Sport"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -83,6 +85,7 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="20sp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:id="@+id/uetv2"
             app:layout_constraintTop_toBottomOf="@id/findbuddysportlist"
             android:text="Select Venue"
