--- a/app/src/main/res/layout/fragment_user_interest.xml
+++ b/app/src/main/res/layout/fragment_user_interest.xml
@@ -14,6 +14,7 @@
         android:text="My Interest"
         android:textSize="56dp"
         android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
