--- a/app/src/main/res/layout/fragment_user_time_line_rv.xml
+++ b/app/src/main/res/layout/fragment_user_time_line_rv.xml
@@ -27,7 +27,7 @@
             android:layout_centerHorizontal="true"
             android:text="Time Slots"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             android:textSize="50sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
@@ -38,6 +38,7 @@
         <android.support.constraint.ConstraintLayout
             android:id="@+id/timelinesportnamevenue"
             android:layout_width="match_parent"
+            android:layout_marginTop="10sp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/timelineheadingheading">
 
@@ -46,7 +47,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="SportName"
-                android:textAlignment="center"
+                android:textAlignment="textEnd"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/timelinevenuename"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -58,7 +60,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Venue Name"
-                android:textAlignment="center"
+                android:textAlignment="textStart"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
@@ -71,6 +74,7 @@
             android:id="@+id/recycler_view_timelinetiles"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="15sp"
             android:scrollbars="vertical"
             app:layout_constraintBottom_toTopOf="@+id/timelinechangesportvenue"
             app:layout_constraintEnd_toEndOf="parent"
