--- a/app/src/main/res/layout/fragment_admin_event.xml
+++ b/app/src/main/res/layout/fragment_admin_event.xml
@@ -116,6 +116,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/eventstarttime"
             app:layout_constraintHorizontal_bias="0.5"
